[tool.poetry]
name = "rl-research"
version = "0.1.0"
description = "A research repository dedicated to profiling reinforcement learning"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
gymnasium = "^0.29.1"
numpy = "^1.26.0"
torch = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 